RESOLVED FIXED103030
Coordinated Graphics: LayerTreeRenderer::removeTile() does not remove tiles actually.
https://bugs.webkit.org/show_bug.cgi?id=103030
Summary Coordinated Graphics: LayerTreeRenderer::removeTile() does not remove tiles a...
Dongseong Hwang
Reported 2012-11-22 00:09:06 PST
LayerTreeRenderer::removeTile() must add a backing store into m_backingStoresWithPendingBuffers. Otherwise, tiles are not removed.
Attachments
Patch (1.60 KB, patch)
2012-11-22 00:10 PST, Dongseong Hwang
no flags
Dongseong Hwang
Comment 1 2012-11-22 00:10:09 PST
Noam Rosenthal
Comment 2 2012-11-23 08:48:53 PST
Comment on attachment 175604 [details] Patch As always, good catch!
WebKit Review Bot
Comment 3 2012-11-23 08:58:48 PST
Comment on attachment 175604 [details] Patch Clearing flags on attachment: 175604 Committed r135622: <http://trac.webkit.org/changeset/135622>
WebKit Review Bot
Comment 4 2012-11-23 08:58:52 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.