Coordinated Graphics: LayerTreeRenderer::removeTile() does not remove tiles actually. https://bugs.webkit.org/show_bug.cgi?id=103030

Patch by Huang Dongsung <luxtella@company100.net> on 2012-11-23
Reviewed by Noam Rosenthal.

LayerTreeRenderer::removeTile() must add a backing store into
m_backingStoresWithPendingBuffers. Otherwise, tiles are not removed.

* UIProcess/CoordinatedGraphics/LayerTreeRenderer.cpp:
(WebKit::LayerTreeRenderer::removeTile):

git-svn-id: svn://svn.chromium.org/blink/trunk@135622 bbb929c8-8fbe-4397-9dbb-9b2b20218538