third_party/WebKit/Source/WebKit2/UIProcess/CoordinatedGraphics/LayerTreeRenderer.cpp
@@ -452,6 +452,7 @@ void LayerTreeRenderer::removeTile(WebLayerID layerID, int tileID)
     RefPtr<CoordinatedBackingStore> backingStore = getBackingStore(layer);
     backingStore->removeTile(tileID);
     resetBackingStoreSizeToLayerSize(layer);
+    m_backingStoresWithPendingBuffers.add(backingStore);
     removeBackingStoreIfNeeded(layer);
 }
 
